<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fdebc7"
    android:clickable="true" >

    <ImageView
        android:id="@+id/title_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:background="@drawable/ic_title_top"
        android:contentDescription="@null" />

    <ImageView
        android:id="@+id/title_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:adjustViewBounds="true"
        android:background="@drawable/ic_title_bottom"
        android:contentDescription="@null" />

    <com.triplesnake.view.ArialTextView
        android:id="@+id/fun_fact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_top"
        android:textColor="#000"
        android:layout_marginLeft="@dimen/s10dp"
        android:layout_marginRight="@dimen/s10dp"
        android:textSize="@dimen/s12sp" />
    
    <com.triplesnake.view.ArialTextView
        android:id="@+id/title"
        android:layout_marginTop="@dimen/s15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fun_fact"
        android:layout_centerHorizontal="true"
        android:text="@string/result_title_win"
        android:textColor="#000"
        android:textSize="@dimen/s36sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btn_nextgame"
        android:layout_below="@+id/title"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="0dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp" >

            <com.triplesnake.view.ArialTextView
                android:layout_width="0dp"
                android:layout_height="@dimen/s30dp"
                android:layout_weight="1"
                android:gravity="right|center_vertical"
                android:includeFontPadding="false"
                android:text="@string/result_level"
                android:textColor="#000"
                android:textSize="@dimen/s18sp"
                android:textStyle="bold" />

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/s30dp"
                android:layout_weight="0.5" />

            <com.triplesnake.view.ArialTextView
                android:id="@+id/level"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:textColor="#000"
                android:textSize="@dimen/s18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <com.triplesnake.view.ArialTextView
                android:layout_width="0dp"
                android:layout_height="@dimen/s30dp"
                android:layout_weight="1"
                android:gravity="right|center_vertical"
                android:includeFontPadding="false"
                android:text="@string/result_score"
                android:textColor="#000"
                android:textSize="@dimen/s18sp"
                android:textStyle="bold" />

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/s30dp"
                android:layout_weight="0.5" />

            <com.triplesnake.view.ArialTextView
                android:id="@+id/score"
                android:layout_width="0dp"
                android:layout_height="@dimen/s30dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:includeFontPadding="false"
                android:textColor="#000"
                android:textSize="@dimen/s18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <com.triplesnake.view.ArialTextView
                android:layout_width="0dp"
                android:layout_height="@dimen/s30dp"
                android:layout_weight="1"
                android:gravity="right|center_vertical"
                android:includeFontPadding="false"
                android:text="@string/result_bonus"
                android:textColor="#000"
                android:textSize="@dimen/s18sp"
                android:textStyle="bold" />

            <View
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="0.5" />

            <com.triplesnake.view.ArialTextView
                android:id="@+id/bonus"
                android:layout_width="0dp"
                android:layout_height="@dimen/s30dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:includeFontPadding="false"
                android:textColor="#000"
                android:textSize="@dimen/s18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <com.triplesnake.view.ArialTextView
                android:layout_width="0dp"
                android:layout_height="@dimen/s30dp"
                android:layout_weight="1"
                android:gravity="right|center_vertical"
                android:includeFontPadding="false"
                android:text="@string/result_total"
                android:textColor="#00f"
                android:textSize="@dimen/s18sp"
                android:textStyle="bold" />

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/s30dp"
                android:layout_weight="0.5" />

            <com.triplesnake.view.ArialTextView
                android:id="@+id/total"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:includeFontPadding="false"
                android:textColor="#00f"
                android:textSize="@dimen/s18sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <com.triplesnake.view.MenuButton
        android:id="@+id/btn_nextgame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_exit"
        android:layout_marginLeft="@dimen/s10dp"
        android:layout_marginRight="@dimen/s10dp"
        android:background="#00000000"
        custom:centerText="CONTINUE"
        custom:leftText="L"
        custom:normalColor="@color/btn_cont_normal"
        custom:pressedColor="@color/btn_cont_pressed"
        custom:rightText="OOK" />

    <com.triplesnake.view.MenuButton
        android:id="@+id/btn_exit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/title_bottom"
        android:layout_marginBottom="@dimen/s10dp"
        android:layout_marginLeft="@dimen/s10dp"
        android:layout_marginRight="@dimen/s10dp"
        android:layout_marginTop="@dimen/s15dp"
        android:background="#00000000"
        custom:centerText="EXIT"
        custom:leftText="EYOU"
        custom:normalColor="@color/btn_exit_normal"
        custom:pressedColor="@color/btn_exit_pressed"
        custom:rightText="LEAP" />

</RelativeLayout>